Реализовал все методы апи Добавил обработку ошибок
