# internal/view/types.gen.go
@@ -3,21 +3,44 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.11.0 DO NOT EDIT.
 package view
 
-import (
-	"time"
-)
+// PostSongRequest defines model for PostSongRequest.
+type PostSongRequest struct {
+	// Название группы
+	Group string `binding:"required" json:"group"`
+
+	// Название песни
+	Song string `binding:"required" json:"song"`
+}
+
+// PutSongRequest defines model for PutSongRequest.
+type PutSongRequest struct {
+	// Название группы
+	Group *string `binding:"omitempty" json:"group,omitempty"`
+
+	// Ссылка на песню
+	Link *string `binding:"omitempty" json:"link,omitempty"`
+
+	// Дата релиза
+	ReleaseDate *string `binding:"omitempty" json:"releaseDate,omitempty"`
+
+	// Название песни
+	Song *string `binding:"omitempty" json:"song,omitempty"`
+
+	// ИД песни
+	SongID int `binding:"required" json:"songID"`
+
+	// Куплеты песни
+	Text *string `binding:"omitempty" json:"text,omitempty"`
+}
 
 // Song defines model for Song.
 type Song struct {
-	CreatedAt   time.Time `json:"createdAt"`
-	DeletedAt   time.Time `json:"deletedAt"`
-	Group       string    `json:"group"`
-	Id          int       `json:"id"`
-	Link        string    `json:"link"`
-	ReleaseDate time.Time `json:"releaseDate"`
-	Song        string    `json:"song"`
-	Text        string    `json:"text"`
-	UpdatedAt   time.Time `json:"updatedAt"`
+	Group       string `json:"group"`
+	Id          int    `json:"id"`
+	Link        string `json:"link"`
+	ReleaseDate string `json:"releaseDate"`
+	Song        string `json:"song"`
+	Text        string `json:"text"`
 }
 
 // Список песен
@@ -40,6 +63,12 @@ type SongsListResponse struct {
 	Data []Song `json:"data"`
 }
 
+// PostSongJSONBody defines parameters for PostSong.
+type PostSongJSONBody = PostSongRequest
+
+// PutSongJSONBody defines parameters for PutSong.
+type PutSongJSONBody = PutSongRequest
+
 // GetAllSongsParams defines parameters for GetAllSongs.
 type GetAllSongsParams struct {
 	// Номер страницы
@@ -48,3 +77,9 @@ type GetAllSongsParams struct {
 	// Количество сущностей на странице
 	PerPage *int `binding:"lte=1000" form:"perPage,default=15" json:"perPage,omitempty"`
 }
+
+// PostSongJSONRequestBody defines body for PostSong for application/json ContentType.
+type PostSongJSONRequestBody = PostSongJSONBody
+
+// PutSongJSONRequestBody defines body for PutSong for application/json ContentType.
+type PutSongJSONRequestBody = PutSongJSONBody
